# src/modules/cars/entities/Category.ts
@@ -1,9 +1,18 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidv4 } from 'uuid';
 
-class Specification {
+@Entity("categories")
+class Category {
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name: string;
+
+    @Column()
     description: string;
+
+    @CreateDateColumn()
     created_at: Date;
 
     constructor() {
@@ -11,7 +20,6 @@ class Specification {
             this.id = uuidv4();
         }
     }
-
 }
 
-export { Specification };
+export { Category };
